[gd_scene load_steps=3 format=2]

[ext_resource path="res://Shapes/shape.gd" type="Script" id=1]
[ext_resource path="res://Green Block [Tetris].png" type="Texture" id=2]

[node name="I-shape" type="Node2D"]
modulate = Color( 0, 0.858824, 0.92549, 1 )
self_modulate = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="Block" type="Node2D" parent="."]
position = Vector2( -16, 0 )

[node name="Sprite" type="Sprite" parent="Block"]
position = Vector2( -8, -8 )
texture = ExtResource( 2 )
centered = false

[node name="Block2" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Block2"]
position = Vector2( -8, -8 )
texture = ExtResource( 2 )
centered = false

[node name="Block3" type="Node2D" parent="."]
position = Vector2( 16, 0 )

[node name="Sprite" type="Sprite" parent="Block3"]
position = Vector2( -8, -8 )
texture = ExtResource( 2 )
centered = false

[node name="Block4" type="Node2D" parent="."]
position = Vector2( 32, 0 )

[node name="Sprite" type="Sprite" parent="Block4"]
position = Vector2( -8, -8 )
texture = ExtResource( 2 )
centered = false

